--- a/index.html
+++ b/index.html
@@ -4,32 +4,40 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Minesweeper</title>
+    <title>Mine Sweeper</title>
     <link rel="stylesheet" href="main/style.css" />
   </head>
   <body>
     <body onload="onInIt()">
-      <h1>Minesweeper</h1>
-      <div class="timer-container">
-        <span class="timer">0.000</span>
-      </div>
-      <table border="1">
-        <tbody class="board"></tbody>
-      </table>
-      <div class="level-btns-container">
-        <button class="level-btn" onclick="onChangeLevel(4)">Eazy (16)</button>
-        <button class="level-btn" onclick="onChangeLevel(5)">Hard (25)</button>
-        <button class="level-btn" onclick="onChangeLevel(6)">Extreme (36)</button>
-      </div>
-  
-      <div class="victory-container hide">
-        <h1>You Won!</h1>
-        <button class="restart-btn" onclick="onRestartGame()">
-          Click to Restart
-        </button>
-      </div>
+    <h1>Mine Sweeper Game</h1>
+    <h2>Play and have fun :D</h2>
+    <h2 class="msg"></h2>
 
-    <!-- <script src="js/Utilities.js"></script> -->
+    <div class="overall-container">
+    <div class="game-controls">
+      <!-- <div class="top-bar"> -->
+    <button class="restart-btn" onclick="onRestartGame()">😁</button>
+  </div>
+  <div class="lives"></div>
+
+</div>
+</div>
+    <table border="1">
+      <tbody class="board"></tbody>
+    </table>
+    <div class="level-btns-container">
+      <button class="level-btn" onclick="onChangeLevel(4)">Eazy (16)</button>
+      <button class="level-btn" onclick="onChangeLevel(8)">Medium (64)</button>
+      <button class="level-btn" onclick="onChangeLevel(12)">Hard (144)</button>
+    </div>
+    
+    
+    <footer>
+      <p>Creator: Noam Green</p>
+      <p><a href="mailto:noamgr11@gmail.com">noamgr11@gmail.com</a></p>
+    </footer>
+
+    <script src="js/Utilities.js"></script>
     <script src="js/game.js"></script>
   </body>
 </html>
