--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
   <body>
     <body onload="onInIt()">
     <h1>Mine Sweeper Game</h1>
-    <h2>Play and have fun 😎</h2>
+    <h2>Play and have fun 🏁</h2>
     <h2 class="msg"></h2>
 
     <div class="overall-container">
     <div class="game-controls">
-    <button class="smiley" onclick="onRestartGame()">😁</button>
+    <button class="smiley" onclick="onRestartGame()">😃</button>
   </div>
   <div class="lives"></div>
   <div class="timer">00:00</div>
-
+  <button class="dark-mode-btn" onclick="darkMode()">Toggle dark mode</button>
+  
 </div>
 </div>
     <table border="5">
@@ -27,12 +28,11 @@
     </table>
     <div class="level-btns-container">
       <button class="level-btn" onclick="onChangeLevel(4,2)">Eazy (16)</button>
-      <button class="level-btn" onclick="onChangeLevel(8,12)">Medium (64)</button>
-      <button class="level-btn" onclick="onChangeLevel(12,30)">Hard (144)</button>
+      <button class="level-btn" onclick="onChangeLevel(8,14)">Medium (64)</button>
+      <button class="level-btn" onclick="onChangeLevel(12,32)">Hard (144)</button>
     </div>
     <footer>
       <p>Creator: Noam Green</p>
-      <p><a href="mailto:noamgr11@gmail.com">noamgr11@gmail.com</a></p>
     </footer>
 
     <script src="js/Utilities.js"></script>
